--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pimsleur Progress Tracker</title>
   <link rel="stylesheet" href="css/styles.css">
+  <link rel="icon" href="assets/images/pimsleur-icon.png" type="image/png">
 </head>
 
 <body>
