--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
           <button class="btn" id="revertButton">↩ Undo</button>
           <button class="btn" id="resetButton">♻ Done</button>
         </div>
+        <hr>
         <div class="row">
           <div class="wrong-container">
             <button class="btn" id="wrongButton">✗ Bad</button>
@@ -106,6 +107,15 @@
     </div>
 
   </div>
+
+  <div class="confirmation-modal" id="confirmationModal">
+    <div class="modal-content">
+      <p>Are you sure you want to finish?</p>
+      <button class="btn confirm" id="confirmDone">Yes, I'm done</button>
+      <button class="btn cancel" id="cancelDone">Cancel</button>
+    </div>
+  </div>
+
   <script src="js/script.js"></script>
 </body>
 
