--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Pimsleur Progress Tracker</title>
   <link rel="stylesheet" href="css/styles.css">
   <link rel="icon" href="assets/images/pimsleur-icon.png" type="image/png">
+  <link rel="apple-touch-icon" href="assets/images/pimsleur-icon.png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <script>
     let lastTouchEnd = 0;
