--- a/index.html
+++ b/index.html
@@ -61,46 +61,57 @@
       <div class="settings-container">
         <button class="settings-toggle btn">⚙️ View Settings</button>
 
-        <div class="settings-content" id="settingsContent">
-          <!-- Enhanced Checkbox Containers -->
-          <div class="options-container">
-            <div class="checkbox-container">
-              <label class="custom-checkbox">
-                <input type="checkbox" id="goodKeyCheckbox" checked="true" />
-                <span class="checkmark"></span>
-                Enable 'G' for Good
-              </label>
-            </div>
-            <div class="checkbox-container">
-              <label class="custom-checkbox">
-                <input
-                  type="checkbox"
-                  id="goodArrowKeyCheckbox"
-                  checked="true"
-                />
-                <span class="checkmark"></span>
-                Enable 'Right Arrow' for Good
-              </label>
-            </div>
+        <div class="settings-content-container">
+          <div class="settings-content" id="settingsContent">
+            <!-- Enhanced Checkbox Containers -->
+            <div class="options-container">
+              <!-- Add Dark Mode Toggle Button -->
+              <div class="checkbox-container">
+                <label class="custom-checkbox">
+                  <input type="checkbox" id="darkModeToggle" checked="true" />
+                  <span class="checkmark"></span>
+                  Toggle Dark Mode
+                </label>
+              </div>
 
-            <div class="checkbox-container">
-              <label class="custom-checkbox">
-                <input type="checkbox" id="badKeyCheckbox" checked="true" />
-                <span class="checkmark"></span>
-                Enable 'B' for Bad
-              </label>
-            </div>
+              <div class="checkbox-container">
+                <label class="custom-checkbox">
+                  <input type="checkbox" id="goodKeyCheckbox" checked="true" />
+                  <span class="checkmark"></span>
+                  Enable 'G' for Good
+                </label>
+              </div>
+              <div class="checkbox-container">
+                <label class="custom-checkbox">
+                  <input
+                    type="checkbox"
+                    id="goodArrowKeyCheckbox"
+                    checked="true"
+                  />
+                  <span class="checkmark"></span>
+                  Enable 'Right Arrow' for Good
+                </label>
+              </div>
 
-            <div class="checkbox-container">
-              <label class="custom-checkbox">
-                <input
-                  type="checkbox"
-                  id="badArrowKeyCheckbox"
-                  checked="true"
-                />
-                <span class="checkmark"></span>
-                Enable 'Left Arrow' for Bad
-              </label>
+              <div class="checkbox-container">
+                <label class="custom-checkbox">
+                  <input type="checkbox" id="badKeyCheckbox" checked="true" />
+                  <span class="checkmark"></span>
+                  Enable 'B' for Bad
+                </label>
+              </div>
+
+              <div class="checkbox-container">
+                <label class="custom-checkbox">
+                  <input
+                    type="checkbox"
+                    id="badArrowKeyCheckbox"
+                    checked="true"
+                  />
+                  <span class="checkmark"></span>
+                  Enable 'Left Arrow' for Bad
+                </label>
+              </div>
             </div>
           </div>
         </div>
