--- a/index.html
+++ b/index.html
@@ -121,6 +121,11 @@
           <button class="manual-toggle btn">📘 View Manual</button>
           <div class="manual-content" id="manualContent">
             <p>
+              <strong>Dark Mode:</strong> Enables dark mode to reduce eye strain
+              and improve readability in low-light conditions.
+            </p>
+
+            <p>
               <strong>'G' for Good:</strong> Press the 'G' key to mark an answer
               as good.
             </p>
