--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
               <!-- Add Dark Mode Toggle Button -->
               <div class="checkbox-container">
                 <label class="custom-checkbox">
-                  <input type="checkbox" id="darkModeToggle" checked="true" />
+                  <input type="checkbox" id="darkModeToggle" />
                   <span class="checkmark"></span>
                   Toggle Dark Mode
                 </label>
