--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@
           <button class="manual-toggle btn">📘 View Manual</button>
           <div class="manual-content" id="manualContent">
             <p>
-              <strong>Dark Mode:</strong> Enables dark mode to reduce eye strain
-              and improve readability in low-light conditions.
+              <strong>Dark Mode Toggle:</strong> Enables dark mode to reduce eye
+              strain and improve readability in low-light conditions.
             </p>
 
             <p>
