disable sound by default

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
               <div class="checkbox-container">
                 <label class="custom-checkbox">
-                  <input type="checkbox" id="soundToggle" checked="true" />
+                  <input type="checkbox" id="soundToggle" checked="false" />
                   <span class="checkmark"></span>
                   Enable Sound
                 </label>
