bug fix and design update

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <button class="btn" id="revertButton">↩ Undo</button>
             <button class="btn" id="resetButton">♻ Done</button>
           </div>
-          <hr />
+          <div class="line"></div>
           <div class="row">
             <div class="wrong-container">
               <p class="result">
