--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
+    <script src="js/script.js" defer></script>
   </head>
 
   <body>
@@ -295,6 +296,5 @@
 
     <audio id="negativeSound" src="assets/audio/negative-2.mp3"></audio>
     <audio id="positiveSound" src="assets/audio/positive-2.mp3"></audio>
-    <script src="js/script.js"></script>
   </body>
 </html>
