bug fix and cleanup

--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
               <div>12:33:44</div>
             </div>
           </div>
-          <button id="filterButton" class="filter-button btn">🧹 Filter</button>
+          <button id="filterButton" class="filter-button btn filter-mode-all">
+            🧹 Filter
+          </button>
           <div class="line"></div>
 
           <div class="row">
