--- a/index.html
+++ b/index.html
@@ -34,24 +34,24 @@
           </div>
           <div class="line"></div>
           <div class="table-results-container" id="rowContainer">
-            <div class="table-results demo-row">
+            <div class="demo-row-good demo-row">
               <div class="good">Good:</div>
               <div>12:34:56</div>
             </div>
-            <div class="table-results demo-row">
+            <div class="demo-row-bad demo-row">
               <div class="bad">Bad:</div>
               <div>12:33:44</div>
             </div>
-            <div class="table-results demo-row">
+            <div class="demo-row-good demo-row">
               <div class="good">Good:</div>
               <div>12:34:56</div>
             </div>
-            <div class="table-results demo-row">
+            <div class="demo-row-bad demo-row">
               <div class="bad">Bad:</div>
               <div>12:33:44</div>
             </div>
           </div>
-          <button id="filterButton" class="filter-button btn filter-mode-all">
+          <button id="filterButton" class="filter-button btn filter-mode-off">
             🧹 Filter
           </button>
           <div class="line"></div>
