--- a/index.html
+++ b/index.html
@@ -35,19 +35,19 @@
           <div class="line"></div>
           <div class="table-results-container" id="rowContainer">
             <div class="demo-row-good demo-row">
-              <div class="good">Good:</div>
+              <div class="good">✓ Good</div>
               <div>12:34:56</div>
             </div>
             <div class="demo-row-bad demo-row">
-              <div class="bad">Bad:</div>
+              <div class="bad">✗ Bad</div>
               <div>12:33:44</div>
             </div>
             <div class="demo-row-good demo-row">
-              <div class="good">Good:</div>
+              <div class="good">✓ Good</div>
               <div>12:34:56</div>
             </div>
             <div class="demo-row-bad demo-row">
-              <div class="bad">Bad:</div>
+              <div class="bad">✗ Bad</div>
               <div>12:33:44</div>
             </div>
           </div>
