--- a/index.html
+++ b/index.html
@@ -35,20 +35,20 @@
           <div class="line"></div>
           <div class="table-results-container" id="rowContainer">
             <div class="demo-row-good demo-row">
-              <div class="good">✓ Good</div>
-              <div>12:34:56</div>
+              <div class="good demo-row-type">✓ Good</div>
+              <div class="demo-row-time">12:34:30</div>
             </div>
             <div class="demo-row-bad demo-row">
-              <div class="bad">✗ Bad</div>
-              <div>12:33:44</div>
+              <div class="bad demo-row-type">✗ Bad</div>
+              <div class="demo-row-time">12:34:24</div>
             </div>
             <div class="demo-row-good demo-row">
-              <div class="good">✓ Good</div>
-              <div>12:34:56</div>
+              <div class="good demo-row-type">✓ Good</div>
+              <div class="demo-row-time">12:34:16</div>
             </div>
             <div class="demo-row-bad demo-row">
-              <div class="bad">✗ Bad</div>
-              <div>12:33:44</div>
+              <div class="bad demo-row-type">✗ Bad</div>
+              <div class="demo-row-time">12:34:10</div>
             </div>
           </div>
           <button id="filterButton" class="filter-button btn filter-mode-off">
