--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
               <div class="checkbox-container">
                 <label class="custom-checkbox">
-                  <input type="checkbox" id="soundToggle" checked />
+                  <input type="checkbox" id="soundToggle" />
                   <span class="checkmark"></span>
                   🔊 Enable Sound
                 </label>
