--- a/index.html
+++ b/index.html
@@ -33,65 +33,68 @@
             <button class="btn" id="resetButton">♻ Done</button>
           </div>
           <div class="line"></div>
-          <div class="table-results-container" id="rowContainer">
-            <!-- Demo item 1. -->
-            <div class="demo-table-results demo-good" style="display: flex">
-              <p class="demo-table-results-type">
-                <span class="demo-table-results-type-name">✓ Good</span>
-              </p>
-              <p class="demo-table-results-time">
-                <span class="demo-table-results-time-min">36m</span>
-                <span class="demo-table-results-time-sec">16s</span>
-              </p>
-            </div>
+          <div class="table-results-main-container">
+            <button id="filterButton" class="filter-button btn filter-mode-off">
+              🧹 Filter
+            </button>
+            <div class="table-results-container" id="rowContainer">
+              <!-- Demo item 1. -->
+              <div class="demo-table-results demo-good" style="display: flex">
+                <p class="demo-table-results-type">
+                  <span class="demo-table-results-type-name">✓ Good</span>
+                </p>
+                <p class="demo-table-results-time">
+                  <span class="demo-table-results-time-min">36m</span>
+                  <span class="demo-table-results-time-sec">16s</span>
+                </p>
+              </div>
 
-            <!-- Demo item 2. -->
-            <div
-              class="demo-table-results demo-bad demo-table-results-old-rows"
-              style="display: flex"
-            >
-              <p class="demo-table-results-type">
-                <span class="demo-table-results-type-name">✗ Bad</span>
-              </p>
-              <p class="demo-table-results-time">
-                <span class="demo-table-results-time-min">38m</span>
-                <span class="demo-table-results-time-sec">51s</span>
-              </p>
-            </div>
+              <!-- Demo item 2. -->
+              <div
+                class="demo-table-results demo-bad demo-table-results-old-rows"
+                style="display: flex"
+              >
+                <p class="demo-table-results-type">
+                  <span class="demo-table-results-type-name">✗ Bad</span>
+                </p>
+                <p class="demo-table-results-time">
+                  <span class="demo-table-results-time-min">38m</span>
+                  <span class="demo-table-results-time-sec">51s</span>
+                </p>
+              </div>
 
-            <!-- Demo item 3. -->
-            <div
-              class="demo-table-results demo-good demo-table-results-old-rows"
-              style="display: flex"
-            >
-              <p class="demo-table-results-type">
-                <span class="demo-table-results-type-name">✓ Good</span>
-              </p>
-              <p class="demo-table-results-time">
-                <span class="demo-table-results-time-min">36m</span>
-                <span class="demo-table-results-time-sec">16s</span>
-              </p>
-            </div>
+              <!-- Demo item 3. -->
+              <div
+                class="demo-table-results demo-good demo-table-results-old-rows"
+                style="display: flex"
+              >
+                <p class="demo-table-results-type">
+                  <span class="demo-table-results-type-name">✓ Good</span>
+                </p>
+                <p class="demo-table-results-time">
+                  <span class="demo-table-results-time-min">36m</span>
+                  <span class="demo-table-results-time-sec">16s</span>
+                </p>
+              </div>
 
-            <!-- Demo item 4. -->
-            <div
-              class="demo-table-results demo-bad demo-table-results-old-rows"
-              style="display: flex"
-            >
-              <p class="demo-table-results-type">
-                <span class="demo-table-results-type-name">✗ Bad</span>
-              </p>
-              <p class="demo-table-results-time">
-                <span class="demo-table-results-time-min">38m</span>
-                <span class="demo-table-results-time-sec">51s</span>
-              </p>
-            </div>
+              <!-- Demo item 4. -->
+              <div
+                class="demo-table-results demo-bad demo-table-results-old-rows"
+                style="display: flex"
+              >
+                <p class="demo-table-results-type">
+                  <span class="demo-table-results-type-name">✗ Bad</span>
+                </p>
+                <p class="demo-table-results-time">
+                  <span class="demo-table-results-time-min">38m</span>
+                  <span class="demo-table-results-time-sec">51s</span>
+                </p>
+              </div>
 
-            <!-- End of demo items. -->
+              <!-- End of demo items. -->
+            </div>
           </div>
-          <button id="filterButton" class="filter-button btn filter-mode-off">
-            🧹 Filter
-          </button>
+
           <div class="line"></div>
 
           <div class="row">
