button wrapper for bigger click area

--- a/index.html
+++ b/index.html
@@ -109,7 +109,10 @@
                   >0%</span
                 >)
               </p>
-              <button class="btn" id="wrongButton">✗ Bad</button>
+              <div class="btn-wrapper">
+                <button class="btn" id="wrongButton">✗ Bad</button>
+                <div id="clickAreaWrongButton" class="click-area-wrong"></div>
+              </div>
             </div>
             <div class="correct-container">
               <p class="result">
@@ -118,7 +121,13 @@
                   >0%</span
                 >)
               </p>
-              <button class="btn" id="correctButton">✓ Good</button>
+              <div class="btn-wrapper">
+                <button class="btn" id="correctButton">✓ Good</button>
+                <div
+                  id="clickAreaCorrectButton"
+                  class="click-area-correct"
+                ></div>
+              </div>
             </div>
           </div>
         </div>
